# sledributed

./: .gitignore  Cargo.toml  README.md
example/: README.md
example/data_1/: node.toml
example/data_1/database/: db  snap.00000000000005CB  snap.0000000000000626
example/data_2/: node.toml
example/data_2/database/: db  snap.00000000000005CD  snap.0000000000000633
example/data_3/: node.toml
example/data_3/database/: db  snap.00000000000005EB  snap.0000000000000683
src/: client.rs  main.rs  nodes.rs  opax.rs  server.rs  storage.rs
